--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -144,7 +144,126 @@
     "steam_profile": "Steam-Profil",
     "trade_url": "Handels-URL",
     "case_not_found": "Kiste nicht im Inventar gefunden",
-    "subscription_required": "Abonnement Level {{tier}}+ erforderlich"
+    "subscription_required": "Abonnement Level {{tier}}+ erforderlich",
+    "user_not_found": "Benutzer nicht gefunden",
+    "please_login": "Bitte anmelden",
+    "level_progress": "Level-Fortschritt",
+    "items_in_inventory": "Gegenstände im Inventar",
+    "best_weapon": "Beste Waffe",
+    "inventory_empty": "Inventar ist leer",
+    "no_opened_cases": "Keine geöffneten Kisten",
+    "no_withdrawn_items": "Keine abgehobenen Gegenstände",
+    "no_sold_items": "Keine verkauften Gegenstände",
+    "open_cases_hint": "Öffne Kisten, um Gegenstände zu erhalten",
+    "opened_cases_hint": "Geöffnete Kisten werden hier mit der Möglichkeit angezeigt, das gedropte Item zu sehen",
+    "withdrawn_items_hint": "Zur Abhebung ausstehende und bereits an Steam gesendete Gegenstände werden hier angezeigt",
+    "sold_items_hint": "Verkaufte und gegen Abonnement getauschte Gegenstände werden hier angezeigt",
+    "level_bonus_tooltip": {
+      "completing_achievements": "Erfolge abschließen",
+      "daily_login": "Tägliche Spielanmeldung",
+      "shop_purchases": "Shop-Käufe",
+      "event_participation": "Event-Teilnahme",
+      "friend_invites": "Freunde einladen",
+      "level_drop_bonus": "Level-Aufstieg erhöht Drop-Bonus: +0.02% pro Level"
+    },
+    "inventory_descriptions": {
+      "active": "🎮 Deine aktuellen Gegenstände und ungeöffnete Kisten",
+      "opened": "📦 Geöffnete Kisten - fahre über die Kiste, um das gedropte Item zu sehen",
+      "withdrawn": "📤 Zur Abhebung ausstehende Gegenstände: Versand ausstehend und bereits an Steam gesendet",
+      "sold": "💰 Für Währung verkaufte oder gegen Abonnement getauschte Gegenstände"
+    },
+    "loading_inventory": "Lade Inventar...",
+    "case_template_not_found": "Kisten-Vorlage nicht gefunden",
+    "item_received": "Glückwunsch! Du hast erhalten: {{itemName}}",
+    "item_info_error": "Fehler: Konnte Gegenstand-Informationen nicht abrufen",
+    "case_opening_error": "Fehler beim Öffnen der Kiste: {{error}}",
+    "unknown_achievement": "Unbekannter Erfolg",
+    "steam_linked_success": "Steam-Account erfolgreich verknüpft!",
+    "steam_link_error": "Fehler beim Verknüpfen des Steam-Accounts",
+    "steam_link_try_again": "Steam-Account verknüpfung fehlgeschlagen. Bitte versuche es erneut.",
+    "session_expired": "Sitzung abgelaufen. Bitte versuche es erneut.",
+    "steam_already_linked": "Dieses Steam-Konto ist bereits mit einem anderen Benutzer verknüpft.",
+    "linking_process_error": "Verknüpfungsprozess-Fehler. Bitte versuche es erneut.",
+    "account_linking_error": "Ein Fehler ist beim Verknüpfen des Accounts aufgetreten.",
+    "achievements_count": "Erfolge",
+    "total_count": "Gesamt",
+    "loading_yes": "Ja",
+    "loading_no": "Nein",
+    "case_label": "KISTE",
+    "open_button": "Öffnen",
+    "status_pending_withdrawal": "Abhebung ausstehend",
+    "status_withdrawn": "Abgehoben",
+    "status_sold": "Verkauft",
+    "status_opened": "Geöffnet",
+    "item_withdraw_success": "Gegenstand \"{{itemName}}\" erfolgreich zur Abhebung gesendet!",
+    "opening": "Öffne...",
+    "items_suffix": " Gegenstände",
+    "cases_suffix": " Kisten",
+    "streak_suffix": " in Folge",
+    "currency_suffix": " CR",
+    "steam_connected": "Steam verbunden",
+    "steam_not_connected": "Steam nicht verbunden",
+    "subscription_status_days": "{{status}}\n{{days}}",
+    "no_subscription": "Keins",
+    "drop_bonuses": "Drop-Boni",
+    "level_bonus": "Level:",
+    "status_bonus": "Status:",
+    "achievements_bonus": "Erfolge:",
+    "total_bonus": "Gesamtbonus:",
+    "inventory_title": "Inventar",
+    "subscription_tier_1": "Status",
+    "subscription_tier_2": "Status+",
+    "subscription_tier_3": "Status++",
+    "subscription_tier_default": "Tier {{tier}}",
+    "rarity": {
+      "consumer": "Verbraucherklasse",
+      "industrial": "Industrieklasse",
+      "milspec": "Militärklasse",
+      "restricted": "Eingeschränkt",
+      "classified": "Klassifiziert",
+      "covert": "Verdeckt",
+      "contraband": "Schmuggelware"
+    },
+    "purchase_button": "Kaufen",
+    "acquired_date": "Erhalten:",
+    "source": "Quelle:",
+    "sources": {
+      "case": "Kiste",
+      "purchase": "Kauf",
+      "bonus": "Bonus"
+    },
+    "drop_bonus_text": "% Drop",
+    "no_description": "Keine Beschreibung verfügbar",
+    "achievements_not_loaded": "Erfolge nicht geladen",
+    "achievements_expand_hint": "Für Details klicken",
+    "achievements_collapse_hint": "Zum Einklappen klicken",
+    "profile_settings_title": "Profil-Einstellungen",
+    "level_text": "Level",
+    "level_max": "100",
+    "xp_earned_for": "XP wird verdient für:",
+    "opening_cases": "Kisten öffnen",
+    "inventory_tabs": {
+      "active": "Aktiv",
+      "opened_cases": "Geöffnete Kisten",
+      "withdrawn": "Abgehoben",
+      "sold": "Verkauft"
+    },
+    "item_withdraw": {
+      "withdrawing": "Abheben...",
+      "withdraw_to_steam": "Zu Steam abheben",
+      "subscription_required": "Abonnement erforderlich",
+      "need_trade_url": "Steam Handels-URL benötigt",
+      "cannot_withdraw": "Kann nicht zu Steam abheben",
+      "provide_trade_url": "Steam Handels-URL angeben",
+      "ok": "OK",
+      "cancel": "✕",
+      "send_to_steam": "An dein Steam senden",
+      "error_withdrawal_impossible": "Gegenstand kann nicht abgehoben werden",
+      "error_no_subscription": "Dieser Gegenstand kann nicht zu Steam abgehoben werden",
+      "error_no_item_name": "Konnte Gegenstandsname für Abhebung nicht bestimmen",
+      "error_withdrawal_failed": "Fehler beim Abheben des Gegenstands",
+      "error_not_found": "Gegenstand konnte nicht abgehoben werden"
+    }
   },
   "inventory": {
     "title": "Inventar",
@@ -898,6 +1017,6 @@
     "withdrawing": "Abhebung",
     "withdrawn": "Abgehoben",
     "withdrawn_items_hint": "Abgehobene Artikel Hinweis",
-    "xp_earned_for": "XP verdient für"
+    "xp_earned_for": "XP wird verdient für:"
   }
 }
